[package]
name = "bintrim"
version = "0.1.0"
description = "A CLI utility for stripping legacy x86_64 architectures from macOS universal binaries"
authors = ["Florentin Eckl <ecklf@icloud.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29"
ratatui = "0.29.0"
color-eyre = "0.6.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
